Update plugin description file

--- a/GraphFormatter.uplugin
+++ b/GraphFormatter.uplugin
@@ -1,15 +1,15 @@
 {
 	"FileVersion": 3,
-	"Version": 1,
-	"VersionName": "2.0",
+	"Version": 2,
+	"VersionName": "2.1",
 	"FriendlyName": "GraphFormatter",
 	"Description": "Auto arrange graph nodes.",
 	"Category": "Utility",
-	"CreatedBy": "howaajin",
-	"CreatedByURL": "",
-	"DocsURL": "https://drive.google.com/open?id=1f8IQ3vJTZJXTeZst8wC6lWDQqJ-e-5hUxiXs4A68kTk",
+	"CreatedBy": "Howaajin",
+	"CreatedByURL": "https://github.com/howaajin/graphformatter",
+	"DocsURL": "https://github.com/howaajin/graphformatter/blob/master/README.md",
 	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/297159d6d3f4425b9c095b18a811a401",
-	"SupportURL": "",
+	"SupportURL": "howaajin@outlook.com",
 	"EnabledByDefault": true,
 	"CanContainContent": false,
 	"IsBetaVersion": false,
