Replace SupportURL with GitHub issues page

--- a/GraphFormatter.uplugin
+++ b/GraphFormatter.uplugin
@@ -9,7 +9,7 @@
 	"CreatedByURL": "https://github.com/howaajin/graphformatter",
 	"DocsURL": "https://github.com/howaajin/graphformatter/blob/master/README.md",
 	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/297159d6d3f4425b9c095b18a811a401",
-	"SupportURL": "howaajin@outlook.com",
+	"SupportURL": "https://github.com/howaajin/graphformatter/issues",
 	"EnabledByDefault": true,
 	"CanContainContent": false,
 	"IsBetaVersion": false,
