Fix UnrealBuildTool warnings for UE5

--- a/GraphFormatter.uplugin
+++ b/GraphFormatter.uplugin
@@ -22,10 +22,15 @@
 			"LoadingPhase": "PostEngineInit",
 			"WhitelistPlatforms": [
 				"Win64",
-				"Win32",
 				"Mac",
 				"Linux"
 			]
+		}
+	],
+	"Plugins": [
+		{
+			"Name": "Metasound",
+			"Enabled": true
 		}
 	]
 }
