Updated PlatformAllowList field.

--- a/GraphFormatter.uplugin
+++ b/GraphFormatter.uplugin
@@ -19,7 +19,12 @@
 		{
 			"Name": "GraphFormatter",
 			"Type": "Editor",
-			"LoadingPhase": "PostEngineInit"
+			"LoadingPhase": "PostEngineInit",
+			"PlatformAllowList": [
+				"Win64",
+				"Mac",
+				"Linux"
+			]
 		}
 	]
 }
